<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQRCodeActivity">

    <TextView
        android:id="@+id/secretHintTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:labelFor="@+id/secretET"
        android:text="@string/secret_text_label"
        app:layout_constraintBottom_toTopOf="@+id/secretET"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/secretET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/keyHintTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:labelFor="@+id/keyForGenerateET"
        android:text="@string/type_key_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secretET" />

    <EditText
        android:id="@+id/keyForGenerateET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyHintTV" />

    <Button
        android:id="@+id/generateQRCodeBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/generate_command"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyForGenerateET" />

    <ImageView
        android:id="@+id/qrCodeIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/qr_code_description"
        app:layout_constraintBottom_toTopOf="@+id/downloadQRCodeBT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateQRCodeBt"
        app:srcCompat="@null" />

    <Button
        android:id="@+id/downloadQRCodeBT"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:text="@string/download_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/returnFromCreateQRCodeBt"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@null"
        android:contentDescription="@string/return_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>