<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scanSecretLayout"
    tools:context=".ScanSecretActivity">

    <TextView
        android:id="@+id/keyHintTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="12dp"
        android:labelFor="@+id/keyForScanET"
        android:text="@string/type_key_text"
        app:layout_constraintBottom_toTopOf="@+id/keyForScanET"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/keyForScanET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text" />

    <Button
        android:id="@+id/startScannerBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/start_scanner_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyForScanET" />

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/copyBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startScannerBt" />

    <Button
        android:id="@+id/copyBt"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:text="@string/copy_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/returnFromScanPasswordBt"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/return_button_description" />

</androidx.constraintlayout.widget.ConstraintLayout>