<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/scanQRCodeBt"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/scan_qr_code_text"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/decode" />

    <ImageButton
        android:id="@+id/createQRCodeBt"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/generate_command"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanQRCodeBt"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/encode" />

    <ImageButton
        android:id="@+id/quietBt"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@null"
        android:contentDescription="@string/quiet_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>